--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body>
         <section>
             <div class="pageOne">
-                <h2>RUKKY'S</h2>
+                <h2>RUKEVWE'S</h2>
                 <p class="'sub">Weather App</p>
                 <button class="next"><a href="forecast.html">Start</a></button>
             </div>
